Revert "fix(SaleHeaderBanner): add flex wrapper to banner to fix layout issue"
This reverts commit f59696a6717fa5d597be9049d75b33861840d0b2.

--- a/src/patterns/SaleHeaderBanner/_saleHeaderBanner.scss
+++ b/src/patterns/SaleHeaderBanner/_saleHeaderBanner.scss
@@ -1,10 +1,6 @@
 @use '#scss/allPartials' as *;
 
 .#{$px}-sale-header-banner {
-  &__wrapper {
-    display: flex;
-  }
-
   display: flex;
   flex-direction: column;
   margin-bottom: $spacing-md;
